<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity">

    <LinearLayout
        android:id="@+id/backLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/light_primary_color"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Back arrow icon -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/backarrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gui_demo_7614"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            android:textColor="@color/lime"

            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon2" />

    </LinearLayout>
    <!-- Fragment container -->
    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/icon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:onClick="loadFragment1"
        android:contentDescription="@string/icon1"

        />
    <ImageView
        android:id="@+id/icon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="120dp"
        android:clickable="true"
        android:onClick="loadFragment2"
        android:contentDescription="@string/icon2"
         />


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/backLayout"
        android:layout_marginTop="2dp">

    </FrameLayout>

</RelativeLayout>