<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/light_primary_color"
        app:cardCornerRadius="20dp"
        app:cardElevation="50dp"
        >

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="725dp"
            android:layout_margin="2dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_marginBottom="25dp"
                app:srcCompat="@drawable/icon"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="130dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="FirstName"
                android:background="@drawable/rounded_edittext_bg"
                android:gravity="left|end"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"
                />

            <EditText
                android:id="@+id/etlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext_bg"
                android:autofillHints=""

                android:gravity="left"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/etmailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:autofillHints="emailid@domain.com"
                android:background="@drawable/rounded_edittext_bg"
                android:gravity="left"
                android:hint="@string/emailid"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_edittext_bg"
                android:gravity="left"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/etrpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"
                android:autofillHints="Retype Password"
                android:background="@drawable/rounded_edittext_bg"
                android:gravity="left"
                android:hint="@string/retype_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"

                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/yellow"
                    android:textStyle="bold"
                    android:checked="true"
                    android:text="MALE"
                    android:textColor="@color/grey"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="FEMALE"
                    android:textStyle="bold"
                    android:textColor="@color/grey"
                    android:textSize="14dp"
                    android:layout_marginTop="20dp"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/signup"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/signup"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_green"
                    android:text="@string/exit"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    </LinearLayout>